# SimpleVecDB

./: .bandit  .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  ENV_SETUP.md  README.md  benchmarks.md  examples.md  index.html  index.md  lefthook.yml  main.py  mkdocs.yml  objects.inv  opencode.json  pyproject.toml  session  sitemap.xml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
CHANGELOG/: index.html
CONTRIBUTING/: index.html
ENV_SETUP/: index.html
api/: core.md
api/async/: index.html
api/config/: index.html
api/core/: index.html
api/embeddings/: index.html
api/encryption/: index.html
api/engine/catalog/: index.html
api/engine/quantization/: index.html
api/engine/search/: index.html
api/integrations/: index.html
api/types/: index.html
benchmarks/: index.html
docs/: CHANGELOG.md  ENV_SETUP.md  Features.md  examples.md  index.md
docs/api/: core.md  encryption.md  integrations.md  types.md
docs/api/engine/: catalog.md  quantization.md  search.md
docs/guides/: clustering.md
examples/: index.html  quant_benchmark.py
examples/embeddings/: perf_benchmark.py
examples/rag/: langchain_rag.ipynb  llama_rag.ipynb  ollama_rag.ipynb
guides/clustering/: index.html
scripts/: bump_version.py  check_version_sync.py  exercise_async_collection.py  track_metrics.py
src/simplevecdb/: __init__.py  async_core.py  catalog.py  config.py  constants.py  core.py  encryption.py  logging.py  search.py  types.py  utils.py
src/simplevecdb/embeddings/: __init__.py  models.py  server.py
src/simplevecdb/engine/: catalog.py  clustering.py  quantization.py  search.py  usearch_index.py
src/simplevecdb/integrations/: __init__.py  langchain.py  llamaindex.py
src/tinyvecdb/: __init__.py  config.py  core.py  types.py
src/tinyvecdb/embeddings/: models.py  server.py
src/tinyvecdb/integrations/: langchain.py  llamaindex.py
tests/: conftest.py
tests/integration/: test_langchain.py  test_llamaindex.py  test_rag.py  test_server.py  test_v21_features.py
tests/perf/: test_batch_detection.py  test_performance.py
tests/unit/: test_advanced.py  test_async.py  test_async_coverage.py  test_async_v26.py  test_catalog_coverage.py  test_clustering.py  test_core.py  test_cross_collection_search.py  test_encryption.py  test_encryption_coverage.py  test_encryption_salt.py  test_encryption_v1_format.py  test_error_handling.py  test_hierarchy.py  test_multi_collection.py  test_search.py  test_search_coverage.py  test_search_missing_coverage.py  test_streaming.py  test_usearch_index_missing_coverage.py  test_v26_1_features.py  test_v26_encryption_review_pass_3.py  test_v26_misc.py  test_v26_review_pass_3.py  test_v26_review_pass_4.py
tests/unit/core/: test_batch_detection.py  test_brute_force.py  test_core_additional_coverage.py  test_factory_methods.py  test_filters.py  test_initialization.py  test_missing_coverage.py  test_quantization.py  test_similarity_search.py  test_v25_correctness.py  test_v25_features.py  test_v25_robustness.py  test_v26_safety.py
(+10 files in other folders)
