[project]
name = "tinyvecdb"
version = "0.0.1"
description = "Dead-simple local vector database powered by sqlite-vec."
authors = [{ name = "Dayton Dunbar", email = "coderdayton14@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "sqlite-vec>=0.1.2",
    "numpy>=2.0",
]

[project.optional-dependencies]
server = ["fastapi>=0.115", "uvicorn[standard]>=0.30"]
dev = ["pytest>=8.0", "pytest-cov", "jupyterlab", "sentence-transformers"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov",
    "jupyterlab",
    "sentence-transformers",
]