[project]
name = "simplevecdb"
version = "2.5.0"
description = "Dead-simple local vector database powered by usearch HNSW."
authors = [{ name = "Dayton Dunbar", email = "coderdayton14@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24",
    "usearch>=2.16.3",
    "sqlite-vec>=0.1.6",
    "scikit-learn>=1.3.0",      # Clustering (K-means, MiniBatch K-means, HDBSCAN)
    "hdbscan>=0.8.33",          # Density-based clustering
    "sqlcipher3-binary>=0.5.0", # Encryption support
    "cryptography>=41.0",       # Encryption utilities
]

[project.optional-dependencies]
integrations = [
    "langchain-core>=1.0.7",
    "langchain-openai>=1.0.3",
    "llama-index>=0.14.8",
    "llama-index-llms-ollama>=0.9.0",
    "llama-index-llms-openai-like>=0.5.3",
]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sentence-transformers>=5.0",  # 500MB+ models
]
examples = ["ollama"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-asyncio>=0.23.0",
    "jupyterlab",
    "sentence-transformers>=5.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pre-commit>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-psutil>=5.9.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=0.30.1",
    "mkdocs-shadcn>=0.9.7",
    "pymdown-extensions>=10.0",
    "sqlcipher3-binary>=0.5.0",
    "bandit>=1.9.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
simplevecdb-server = "simplevecdb.embeddings.server:run_server"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
    "perf: marks tests as performance benchmarks",
]

[tool.ruff]
target-version = "py312"
exclude = ["exploration", "docs", "htmlcov", "site"]

[tool.mypy]
python_version = "3.12"
exclude = ["exploration", "docs", "htmlcov", "site"]
